사원 입력기능 추가
매장 및 사원 조회페이지 입력기능 추가하였음.

--- a/sakila/WebContent/address/address.html
+++ b/sakila/WebContent/address/address.html
@@ -89,37 +89,37 @@
                   </select>
                </div> 
         	</div>
-        	<div class="col-sm-6">
+        	<div class="col-sm-3">
         		<div class="form-group">
-			      	<label for="usr">국가 코드</label>
-			      	<input type="text" id="countryId" readonly="readonly">
+			      	<label for="countryId">국가 코드</label>
+			      	<input type="text" class="form-control" id="countryId" readonly="readonly">
 			    </div>
         		<div class="form-group">
-			      	<label for="usr">도시 코드</label>
-			      	<input type="text" id="cityId" readonly="readonly">
+			      	<label for="cityId">도시 코드</label>
+			      	<input type="text" class="form-control" id="cityId" readonly="readonly">
 			    </div>
         		<div class="form-group">
-			      	<label for="usr">주소</label>
-			      	<input type="text" id="address">
+			      	<label for="address">주소</label>
+			      	<input type="text" class="form-control" id="address">
 			    </div>
         		<div class="form-group">
-			      	<label for="usr">상세주소</label>
-			      	<input type="text" id="address2">
+			      	<label for="address2">상세주소</label>
+			      	<input type="text" class="form-control" id="address2">
 			    </div>
         		<div class="form-group">
-			      	<label for="usr">도시명</label>
-			      	<input type="text" id="district">
+			      	<label for="district">도시명</label>
+			      	<input type="text" class="form-control" id="district">
 			    </div>
         		<div class="form-group">
-			      	<label for="usr">우편번호</label>
-			      	<input type="text" id="postalCode">
+			      	<label for="postalCode">우편번호</label>
+			      	<input type="text" class="form-control" id="postalCode">
 			    </div>
         		<div class="form-group">
-			      	<label for="usr">전화번호</label>
-			      	<input type="text" id="phone">
+			      	<label for="phone">전화번호</label>
+			      	<input type="text" class="form-control" id="phone">
 			    </div>
         		<div class="form-group">
-			      	<button type="button" id="addAddress">입력</button>
+			      	<button type="button" class="form-control" id="addAddress">입력</button>
 			    </div>
 			    
         	</div>
