--- a/sakila/WebContent/address/country.html
+++ b/sakila/WebContent/address/country.html
@@ -51,10 +51,10 @@
 		<h1>국가관리</h1>
 		<hr>
 		
-			<div class="form-group">
-		        <label style="font-weight:bolder;">국가명 :</label>
-		        <input type="text" type="text" id="country">
-		        <button type="button" id ="addCountry">추가</button>
+			<div class="form-group col-sm-3">
+		        <label for="country" style="font-weight:bolder;">국가명</label>
+		        <input type="text" class="form-control" type="text" id="country">
+		        <button type="button" class="form-control" id ="addCountry">추가</button>
 		    </div>
 		
 					
