--- a/sakila/WebContent/address/city.html
+++ b/sakila/WebContent/address/city.html
@@ -60,17 +60,17 @@
 					나라 목록 : <br>
 					<select size="10" id="countryList"></select>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-sm-3">
 					<div class="form-group">
 					  	<label for="usr">국가코드 :</label>
-					  	<input type="text" id="countryId" readonly="readonly">
+					  	<input type="text" class="form-control" id="countryId" readonly="readonly">
 					</div>
 					<div class="form-group">
 					 	<label for="pwd"> 도시 :</label>
-					  	<input type="text" id="city">
+					  	<input type="text" class="form-control" id="city">
 					</div>
 					<div>
-						<button type="button" id="addCity">입력</button>
+						<button type="button" class="form-control" id="addCity">입력</button>
 					</div>
 				</div>	
 			</div>	
