--- a/sakila/WebContent/business/staff.html
+++ b/sakila/WebContent/business/staff.html
@@ -65,7 +65,7 @@
 			    <div class="form-group">
 			      <label >이름</label>
 			      <input type="text" class="form-control" id="firstName" name="firstName" placeholder="성">
-			      <input type="text" class="form-control" id="lastNmae" name="lastNmae" placeholder="이름">
+			      <input type="text" class="form-control" id="lastName" name="lastName" placeholder="이름">
 			    </div>
 			     <div class="form-group">
 			      <label for="email">이메일</label>
